# DA-IPAM

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  ROADMAP-EVOLUZIONE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  server.ts
.claude/: settings.json
agent/: .env.example  .gitignore  README.md  openapi.json  pyproject.toml
agent/da_invent_agent/: auth.py  config.py  errors.py  main.py  models.py  scopes.py  system_probe.py
agent/da_invent_agent/exec/: arp.py  dns.py  nmap.py  ping.py  snmp.py  ssh.py  winrm.py  winrm_bridge.py
agent/scripts/: check_openapi_fresh.sh  da-invent-agent.service  dump_openapi.py  install.sh
agent/tests/: conftest.py  test_arp_parser.py  test_auth.py  test_endpoints_phase3.py  test_exec_ping.py  test_models.py  test_snmp_routes_parser.py
data/: README.md  ipam.empty.db  package-dictionary.json
deploy/: da-invent-update.service  da-invent-update.timer  da-invent.service  nginx-ssl.conf
docs/: ANALISI-FLOW-FLOWCHART.md  CLASSIFICAZIONE-HOST.md  CLAUDE-legacy-20260511.md  CREDENZIALI-E-PROTOCOLLI.md  DA-MKNET-ACQUISIZIONE-DATI.md  DEVICE-ASSIGNMENT-E-MAPPING.md  DEVICE-FINGERPRINTING.md  INSTALLAZIONE-PROXMOX.md  INVENTARIO-ASSET-MANAGEMENT.md  IPAM-ASSEGNAZIONE-DEVICE-SNMP-FINGERPRINT.md  MANUALE-ACTIVE-DIRECTORY.md  MANUALE-SVILUPPATORE.md  MANUALE-UTENTE.md  MANUALE-WINRM.md  PIANO-TOOLBAR-FASI-E-MONITORAGGIO.md  REVISIONE-LOGICA-PROGETTO.md  STATI-HOST-E-DISCOVERY.md  TODO-scheduler-defaults.md  audit-bug-sintesi.md
patches/: httpntlm+1.8.13.patch
(+803 files in other folders)
