[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "da-invent-agent"
version = "0.2.2"
description = "DA-INVENT remote agent: esegue ping/nmap/DNS/SNMP/SSH/WinRM sulla rete del cliente, invocato via Tailscale dall'hub DA-IPAM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Domarc" }]

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "pyyaml>=6.0,<7.0",
    "bcrypt>=4.2,<5.0",
    "psutil>=6.0,<7.0",
    "asyncssh>=2.18,<3.0",
    "pywinrm[kerberos]>=0.5,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
da-invent-agent = "da_invent_agent.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["da_invent_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
